Prevent logos from squishing on small screens

--- a/scss/_patterns_logo-section.scss
+++ b/scss/_patterns_logo-section.scss
@@ -16,6 +16,7 @@
     .p-logo-section__logo {
       display: block;
       height: 8rem;
+      max-width: none; // prevent logos from squishing on small screens
       width: auto;
     }
 
